<resources>
    <string name="app_name">TESTEO</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_world">Hola Mundo desde archivo</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!--    String for calculator-->

    <string name="num_1">Numero 1</string>
    <string name="num_2">Numero 2</string>
    <string name="calcular">Calcular</string>
    <string name="suma">SUMA</string>
    <string name="res">RESTA</string>
    <string name="mul">MULTIPLICACION</string>
    <string name="div">DIVISION</string>
    <string name="email">INGRESE SU EMAIL</string>
    <string name="guardar">Guardar</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>